--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
     <script type="text/javascript" src="js/d3.v7.min.js"></script>
     <script type="text/javascript" src="js/netflix.js"></script>
 </head>
-<body onload="createViz()">
-<div id="genreImdb"></div>
+<body onload="createScoreDistributionViz()">
+<div id="genreImdb">
+    <form>
+        <span>Score: </span><select id="score" name="score">
+            <option value="imdb">IMDB</option>
+            <option value="tmdb">TMDB</option>
+        </select>
+        <span> Sort by: </span><select id="rankType" name="Sort by">
+            <option value="mean">Mean Score</option>
+            <option value="alphabetical">Alphabetical</option>
+        </select>
+    </form>
+</div>
 </body>
 </html>
