--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body onload="createScoreDistributionViz()">
 <div id="genreImdb">
+    <div id="tooltip" style="position: absolute; display: none; padding: 10px; background: rgba(0,0,0,0.6); color: #fff; border-radius: 4px; pointer-events: none;"></div>
     <form>
         <span>Score: </span><select id="score" name="score">
             <option value="imdb">IMDB</option>
