--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
 <p>Use scatterplot to visualize the relationship between popularity and review score. </p>
 <div id="scatterPlotPopularityScore">
     <form style="margin-bottom: 15px; margin-left: 240px;">
-        <span>Scale: </span><label for="scatterPlotPopRevScale"></label><select id="scatterPlotPopRevScale" name="scale">
+        <span>Scale: </span><label for="scatterPlotPopRevScale"></label><select id="scatterPlotPopRevScale"
+                                                                                name="scale">
         <option value="linear">Linear</option>
         <option value="log">Log</option>
     </select>
